1.restful，引入diContainer，注意，要在diContainer的build.gradle中引入jar { duplicatesStrategy(DuplicatesStrategy.EXCLUDE) }，否则报错Entry classpath.index is a duplicate but no duplicate handling strategy has been set. 2.换了个实现，没有影响功能